[project]
name = "dateforge"
version = "1.0.0"
description = "Intelligent PDF date extraction and renaming tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-dateutil>=2.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
    "numpy>=2.3.4",
    "pillow>=10.0.0",
]
